# TOSCA-Backend

./: .env.example  .gitignore  .gitmodules  .prettierignore  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  integration_test.py  manage.py  project_structure.md  pyproject.toml  pytest.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docker/: Dockerfile
docker/django/: Dockerfile  entrypoint.sh
docker/geoserver-init/: entrypoint-wrapper.sh  init-jdbc-roles.sh  jdbcconfig.properties.template  setup-role-service.sh
docker/initdb/: init001.sh  insert_geoserver_roles_docker.sh
docker/postgis/: init001.sh
docs/development/: IAM_access_control.md  UI-UX_Rules.md  base.html  claude.md  console_dev.md  daily.md  django-geoserver.md  geoEngineGroupPermission.md  geodata_console.html  git-workflow.md  home.html  logging-strategy.md
docs/feature-add/: failure.md  milestone.md  tasks.md
docs/geodata_engine/: adapter_guide.md  architecture.md  geoserver_poc_scope.md
logs/: .gitignore  README.md
scripts/: init_db.py  load_sample_data.py
static/css/: base.css
templates/: base.html
templates/geo_console/: base.html  engine_detail.html  engine_form.html  geodata_console.html  store_create.html  store_list.html  workspace_create.html  workspace_list.html
tests/: conftest.py  factories.py
tosca_api/: asgi.py  urls.py  views.py  wsgi.py
tosca_api/settings/: base.py  development.py  production.py  test.py
(+177 files in other folders)
